# photo

./: .gitignore  404.html  CNAME  Cargo.toml  LICENSE  README.md  book.toml  highlight.js  index.html  print.html  running.html  searchindex.js  searchindex.json
.github/workflows/: build.yml  doc.yml
book/: SUMMARY.md  running.md
book/exchange/: index.md
book/step/: crop.md
exchange/: index.html
src/: context.rs  lib.rs  main.rs
src/schema/: mod.rs
src/schema/mutation/: create_exchange.rs  mod.rs  steps.rs
src/schema/mutation/steps/: mod.rs
src/schema/query/: mod.rs
src/steps/: crop.rs  mod.rs  resize.rs
src/steps/conf/: blur.rs
src/steps/transform/: crop.rs  flip.rs  mod.rs
src/util/: mod.rs
step/: crop.html
tests/: baseline.rs  blur_base64.rs  crop_base64.rs  flip_base64.rs  resize_base64.rs
theme/: highlight.js
