[package]
name = "photo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-lab = "0.16"
actix-cors = "0.6"

juniper = "0.15.10"

env_logger = "0.9"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
derive_more = "0.99.17"
base64 = "0.13.0"
photon-rs = "0.3.1"
